force-app/main/default/objects/Contact/fields/Data_Migration_Conversion_Key__c.field-meta.xml
<CustomField>
    <fullName>Data_Migration_Conversion_Key__c</fullName>
    <description>Represents the primary identifier for the record from the legacy source system when migrated.</description>
    <externalId>true</externalId>
    <inlineHelpText>Represents the primary identifier for the record from the legacy source system when migrated.</inlineHelpText>
    <label>Data Migration Conversion Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>