force-app/main/default/objects/Contact/fields/Licensed_Veterinarian__c.field-meta.xml
<CustomField>
    <fullName>Licensed_Veterinarian__c</fullName>
    <label>Licensed Veterinarian</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>