force-app/main/default/objects/Contact/fields/Ordering_Contact__c.field-meta.xml
<CustomField>
    <fullName>Ordering_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ordering Contact</label>
    <type>Checkbox</type>
</CustomField>