force-app/main/default/objects/Contact/fields/Preferred_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Type__c</fullName>
    <label>Preferred Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Post</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>