force-app/main/default/objects/Contact/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <label>Role Specialty</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Grooming</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>