force-app/main/default/objects/Contact/fields/Veterinarian_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Veterinarian_Registration_Number__c</fullName>
    <label>Veterinarian Registration Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>