force-app/main/default/objects/Contact/recordTypes/Covetrus_Contact.recordType-meta.xml
<RecordType>
    <fullName>Covetrus_Contact</fullName>
    <active>true</active>
    <label>Covetrus Contact</label>
</RecordType>