force-app/main/default/objects/Contact/validationRules/Preferred_Contact_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Preferred_Contact_Type</fullName>
    <active>true</active>
    <description>If Preferred Contact Type equals Email, then Email is required on the Contact record.</description>
    <errorConditionFormula>AND( ISPICKVAL( Preferred_Contact_Type__c , &quot;Email&quot;) , ISBLANK( Email ) )</errorConditionFormula>
    <errorMessage>Email is required when Preferred Contact Type is &quot;Email&quot;</errorMessage>
</ValidationRule>