force-app/main/default/objects/Contact/listViews/Email_Contacts.listView-meta.xml
<ListView>
    <fullName>Email_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Contact_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>notEqual</operation>
    </filters>
    <label>Email Contacts</label>
</ListView>