force-app/main/default/objects/Contact/listViews/EMEA_Contacts.listView-meta.xml
<ListView>
    <fullName>EMEA_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Contact_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>EMEA</value>
    </filters>
    <label>EMEA Contacts</label>
</ListView>