force-app/main/default/objects/Contact/listViews/EMEA_Contacts_Inactive.listView-meta.xml
<ListView>
    <fullName>EMEA_Contacts_Inactive</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Contact_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact_Status__c</field>
        <operation>equals</operation>
        <value>Inactive</value>
    </filters>
    <label>EMEA Contacts Inactive</label>
</ListView>