force-app/main/default/objects/Contact/listViews/Last_modified_by.listView-meta.xml
<ListView>
    <fullName>Last_modified_by</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UPDATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>Ashley</value>
    </filters>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>10/30/2019 12:00 AM</value>
    </filters>
    <label>Last modified by</label>
</ListView>