force-app/main/default/objects/Contact/listViews/Practice_Managers_and_Owners.listView-meta.xml
<ListView>
    <fullName>Practice_Managers_and_Owners</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Contact_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>notEqual</operation>
        <value>NULL</value>
    </filters>
    <label>Practice Managers and Owners</label>
</ListView>